Local Repository Syncronization. Major Changes. Code Rebase. Etc.